--- a/src/Views/Dashboard/Dashboard.module.scss
+++ b/src/Views/Dashboard/Dashboard.module.scss
@@ -6,3 +6,20 @@
 	height: 100vh;
 	width: 100vw;
 }
+
+.Dashboard-content {
+	display: flex;
+	padding: 24px;
+	gap: 32px;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+}
+
+.Dashboard-model {
+	width: 50%;
+}
+
+.Dashboard-stats {
+	width: 50%;
+}
