Feature left navigation bar

--- a/src/Views/Dashboard/Dashboard.module.scss
+++ b/src/Views/Dashboard/Dashboard.module.scss
@@ -1,10 +1,14 @@
 .Dashboard-layout {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	//align-items: center;
 	justify-content: flex-start;
 	height: 100vh;
 	width: 100vw;
+}
+
+.Dashboard-sidebar {
+	height: 100%;
 }
 
 .Dashboard-content {
