--- a/src/Features/TrackerWidget/TrackerWidget.module.scss
+++ b/src/Features/TrackerWidget/TrackerWidget.module.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	gap: 8px;
 	padding: 6px 14px 6px 5px;
-	background-color: #e2e6ef;
+	background: #f1f3f7;
 	border: 1px solid #f1f4f7;
 	border-radius: 24px;
 
