change the navigation

--- a/src/Features/NavBar/Components/Navigation/Navigation.module.scss
+++ b/src/Features/NavBar/Components/Navigation/Navigation.module.scss
@@ -4,10 +4,13 @@
 		padding: 8px 16px 8px 16px;
 		justify-content: center;
 		align-items: center;
+		height: 32px;
 		gap: 8px;
 		border-color: #e2e6ef;
 		border-radius: 999px;
-		background: #ffff;
+		background: #000;
+		color: #fff;
+		line-height: 8px;
 
 		svg {
 			path {
@@ -19,30 +22,31 @@
 			border: 1px solid #fff;
 		}
 	}
+	button {
+		display: flex;
+		padding: 8px 16px 8px 16px;
+		justify-content: center;
+		align-items: center;
+		height: auto;
+		gap: 8px;
+		background: none;
+		border-radius: 99px;
+		color: #0b101a;
+		text-align: center;
+		height: 32px;
+		font-size: 14px;
+		font-style: normal;
+		font-weight: 500;
+		line-height: auto;
+	}
 
 	display: flex;
 	gap: 2px;
 
 	border-radius: 99px;
 	border: 1px solid #fff;
-	background: #e2e6ef;
-
+	align-items: center;
+	justify-content: center;
 	/* Scrim blur */
 	backdrop-filter: blur(1.5px);
-
-	button {
-		display: flex;
-		padding: 8px 16px 8px 16px;
-		justify-content: center;
-		align-items: center;
-		gap: 8px;
-		background: none;
-		border-radius: 99px;
-		color: #0b101a;
-		text-align: center;
-		font-size: 14px;
-		font-style: normal;
-		font-weight: 500;
-		line-height: 16px;
-	}
 }
