--- a/src/Features/NavBar/Components/NotificationsHub/NotificationHub.module.scss
+++ b/src/Features/NavBar/Components/NotificationsHub/NotificationHub.module.scss
@@ -7,7 +7,11 @@
 	align-items: center;
 
 	border-radius: 99px;
-	border: 1px solid #fff;
+	border: 1px solid rgba(95, 104, 119, 0.1);
+	background: rgba(255, 255, 255, 0.04);
+
+	backdrop-filter: blur(1px);
+
 	background: rgba(255, 255, 255, 0.04);
 	backdrop-filter: blur(1px);
 
