--- a/src/Features/NavBar/Navbar.module.scss
+++ b/src/Features/NavBar/Navbar.module.scss
@@ -4,6 +4,8 @@
 	padding: 10px 20px;
 	width: 100%; /* Stretch to full width of the container */
 	box-sizing: border-box; /* Ensure padding doesn't cause overflow */
+	align-items: center;
+
 	.logo-wrapper {
 		svg {
 			width: 150px;
