--- a/src/Views/Dashboard/Dashboard.module.scss
+++ b/src/Views/Dashboard/Dashboard.module.scss
@@ -20,15 +20,21 @@
 	box-sizing: border-box;
 }
 
+.Dashboard-left {
+	display: flex;
+	flex-direction: row;
+	flex: 1;
+}
+
 .Dashboard-model {
-	width: 50%;
+	width: 100%;
 }
 
 .Dashboard-stats {
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
-	width: 50%;
+	flex: 1;
 	overflow-x: hidden;
 
 	> * {
