--- a/src/Features/KeyConcernsWidget/Components/Tabs/Tabs.module.scss
+++ b/src/Features/KeyConcernsWidget/Components/Tabs/Tabs.module.scss
@@ -2,7 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	background-color: #ffffff;
-	padding: 24px;
 	gap: 20px;
 }
 
@@ -14,8 +13,12 @@
 	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
 	padding: 2px;
 	display: flex;
-	height: 36px;
+	min-height: 36px;
 	width: fit-content;
+
+	@media (max-width: 980px) {
+		flex-wrap: wrap;
+	}
 }
 
 .Tabs-tab {
@@ -34,6 +37,13 @@
 		box-shadow: 0px 2px 4px 1px rgba(20, 28, 44, 0.01);
 		border-color: transparent;
 		// transform: scale(1.01);
+	}
+
+	@media (max-width: 980px) {
+		font-size: 12px;
+		font-weight: 500;
+		line-height: 18px;
+		letter-spacing: 0em;
 	}
 }
 
