--- a/src/Views/Dashboard/Dashboard.module.scss
+++ b/src/Views/Dashboard/Dashboard.module.scss
@@ -18,6 +18,10 @@
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
+
+	@media (max-width: 920px) {
+		flex-direction: column;
+	}
 }
 
 .Dashboard-left {
@@ -34,7 +38,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
-	flex: 1;
+	width: 51%;
 	overflow-x: hidden;
 
 	> * {
@@ -48,6 +52,10 @@
 		> *:nth-child(#{$i}) {
 			animation-delay: calc(0.1s + ($i - 1) * 0.15s);
 		}
+	}
+
+	@media (max-width: 920px) {
+		width: 100%;
 	}
 }
 
