enhancement: added hover effect to ConnectWatchWidget button

--- a/src/Features/ConnectWatchWidget/ConnectWatchWidget.module.scss
+++ b/src/Features/ConnectWatchWidget/ConnectWatchWidget.module.scss
@@ -102,10 +102,13 @@
 	border-radius: 100px;
 	box-shadow: 0px 4px 14px 0px #6b161630;
 	z-index: 1;
+	transition: all 0.2s ease;
 
 	&:hover {
 		background-color: #f5eeee;
-		transform: scale(1.02);
+		// border-color: rgba(255, 95, 168, 0.7);
+		border-color: rgba(255, 40, 27, 0.6);
+		transform: scale(1.05, 1.1);
 	}
 
 	&:active {
