ui: updated TrackerWidget and AgeWidget styles according to new design

--- a/src/Features/TrackerWidget/TrackerWidget.module.scss
+++ b/src/Features/TrackerWidget/TrackerWidget.module.scss
@@ -4,7 +4,8 @@
 	align-items: center;
 	gap: 8px;
 	padding: 6px 14px 6px 5px;
-	background: #f1f3f7;
+	background: linear-gradient(89.78deg, #f1f3f7 0.19%, #d3def5 64.56%);
+
 	border: 1px solid #f1f4f7;
 	border-radius: 24px;
 
