--- a/src/Features/AgeWidget/Components/AgeMetrics/AgeMetrics.module.scss
+++ b/src/Features/AgeWidget/Components/AgeMetrics/AgeMetrics.module.scss
@@ -69,7 +69,7 @@
 }
 
 .AgeMetrics-border-green {
-	border-left: 2px solid #14d828;
+	border-left: 2px solid rgba(21, 219, 207, 1);
 }
 
 .AgeMetrics-border-blue {
