--- a/src/Features/AgeWidget/AgeWidget.module.scss
+++ b/src/Features/AgeWidget/AgeWidget.module.scss
@@ -3,6 +3,7 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
+	position: relative;
 	gap: 32px;
 	padding: 20px;
 	background: linear-gradient(
