--- a/src/Features/DigitalTwin/Dropdown/Dropdown.module.scss
+++ b/src/Features/DigitalTwin/Dropdown/Dropdown.module.scss
@@ -6,7 +6,7 @@
 
 .trigger {
 	width: 100%;
-	background-color: white;
+	background-color: white !important;
 	border: 1px solid #e8e8e8 !important;
 	border-radius: 20px !important;
 	cursor: pointer;
