--- a/src/Views/Dashboard/Dashboard.module.scss
+++ b/src/Views/Dashboard/Dashboard.module.scss
@@ -1,15 +1,25 @@
 .Dashboard-layout {
 	display: flex;
 	flex-direction: column;
-	//align-items: center;
 	justify-content: flex-start;
 	height: 100vh;
 	width: 100vw;
-	overflow-y: scroll;
+	overflow: hidden;
+}
+
+.Dashboard-dt-container {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	position: relative;
 }
 
 .Dashboard-sidebar {
 	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 2;
 }
 
 .Dashboard-content {
@@ -17,7 +27,7 @@
 	padding: 24px;
 	gap: 32px;
 	width: 100%;
-	height: 100%;
+	height: calc(100vh - 60px);
 	box-sizing: border-box;
 
 	@media (max-width: 920px) {
@@ -29,10 +39,14 @@
 	display: flex;
 	flex-direction: row;
 	flex: 1;
+	position: relative;
 }
-
 .Dashboard-model {
-	width: 100%;
+	margin-left: 60px;
+	width: 90%;
+	height: calc(100% - 50px);
+	position: relative;
+	padding-top: 50px;
 }
 
 .Dashboard-stats {
@@ -42,14 +56,6 @@
 	width: 51%;
 	height: fit-content;
 	padding-bottom: 24px;
-	// overflow-x: hidden;
-
-	// > * {
-	// 	transform: translateX(100%);
-	// 	// opacity: 0;
-	// 	animation: slideIn 0.8s ease-out forwards;
-	// 	animation-delay: calc((var(--child-index, 1) - 1) * 0.2s);
-	// }
 
 	&.animate > * {
 		animation: slideOutAndIn 1.5s ease-out forwards;
