--- a/src/Features/NavBar/Components/Three/canvas.scss
+++ b/src/Features/NavBar/Components/Three/canvas.scss
@@ -5,6 +5,7 @@ body {
 .canvas-container {
 	position: relative;
 	width: 100%;
+	max-width: 50vw;
 	height: 100%;
 }
 
@@ -38,24 +39,25 @@ canvas {
 
 .canvas-controls {
 	position: absolute;
-	bottom: 20px;
-	right: 20px;
+	bottom: 0px;
+	right: 0px;
 	display: flex;
+	justify-content: center;
+	align-items: center;
+
 	flex-direction: column;
 	gap: 4px;
 	z-index: 1000;
 
 	.control-btn {
-		width: 32px;
-		height: 32px;
-		border-radius: 50%;
+		border-radius: 24px;
 		background-color: white;
 		border: 1px solid #e6e6e6;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		cursor: pointer;
-		padding: 0;
+
 		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
 		transition: all 0.2s ease;
 
