--- a/src/Features/TrackerWidget/TrackerWidget.module.scss
+++ b/src/Features/TrackerWidget/TrackerWidget.module.scss
@@ -4,9 +4,9 @@
 	align-items: center;
 	gap: 8px;
 	padding: 6px 14px 6px 5px;
-	background: linear-gradient(89.78deg, #f1f3f7 0.19%, #d3def5 64.56%);
-
-	border: 1px solid #f1f4f7;
+	// background: linear-gradient(89.78deg, #f1f3f7 0.19%, #d3def5 64.56%);
+	border: 1.5px solid #94b2ec;
+	// border: 1px solid #f1f4f7;
 	border-radius: 24px;
 
 	@media (max-width: 1248px) {
