--- a/src/Features/NavBar/Components/Three/canvas.scss
+++ b/src/Features/NavBar/Components/Three/canvas.scss
@@ -5,16 +5,26 @@ body {
 .canvas-container {
 	position: relative;
 	width: 100%;
-	max-width: 50vw;
-	height: 100%;
+	height: 100vh;
+}
+
+.canvas-wrapper {
+	position: absolute;
+	width: 38vw;
+	height: 80vh;
+	left: 50%;
+	top: 47%;
+	transform: translate(-50%, -50%);
 }
 
 canvas {
 	background-color: white;
+	width: 100% !important;
+	height: 100% !important;
 }
 
 .canvas-class {
-	position: fixed;
+	position: absolute !important;
 	transition: all 0.3s ease;
 
 	&.stretched {
@@ -39,12 +49,11 @@ canvas {
 
 .canvas-controls {
 	position: absolute;
-	bottom: 0px;
-	right: 0px;
+	bottom: 20px;
+	right: 20px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 	flex-direction: column;
 	gap: 4px;
 	z-index: 1000;
@@ -57,9 +66,10 @@ canvas {
 		align-items: center;
 		justify-content: center;
 		cursor: pointer;
-
 		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
 		transition: all 0.2s ease;
+		width: 40px;
+		height: 40px;
 
 		span {
 			color: #666666;
