--- a/src/Features/CtaModal/CtaModal.module.scss
+++ b/src/Features/CtaModal/CtaModal.module.scss
@@ -1,3 +1,5 @@
+@import "../../App/Styles/_mixins.scss";
+
 .CtaModal-container {
 	position: fixed;
 	bottom: 24px;
@@ -14,6 +16,35 @@
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+
+	animation: slideIn 0.5s ease-out forwards;
+
+	&-closed {
+		background-color: red;
+		animation: slideOut 0.5s ease-out forwards;
+	}
+
+	@include media_920 {
+		display: none;
+	}
+}
+
+@keyframes slideOut {
+	0% {
+		transform: translateX(0);
+	}
+	100% {
+		transform: translateX(-100%);
+	}
+}
+
+@keyframes slideIn {
+	0% {
+		transform: translateX(-100%);
+	}
+	100% {
+		transform: translateX(0);
+	}
 }
 
 .CtaModal-head {
@@ -46,9 +77,14 @@
 
 .CtaModal-cross-container {
 	cursor: pointer;
+	transition: all 0.3s ease;
 
 	&:hover {
 		transform: scale(1.05);
+	}
+
+	&-closed {
+		opacity: 0;
 	}
 }
 
@@ -84,4 +120,18 @@
 .CtaModal-cart-container {
 	width: 20px;
 	height: 20px;
+}
+
+.CtaModal-chevron {
+	position: absolute;
+	top: 6%;
+	right: 0;
+	transform: rotate(270deg);
+	opacity: 0;
+	transition: all 0.3s ease;
+	cursor: pointer;
+
+	&-closed {
+		opacity: 1;
+	}
 }
