--- a/src/Features/NavBar/Components/Three/canvas.scss
+++ b/src/Features/NavBar/Components/Three/canvas.scss
@@ -1,7 +1,3 @@
-body {
-	overflow-y: hidden;
-}
-
 .canvas-container {
 	position: relative;
 	width: 100%;
@@ -15,6 +11,24 @@ body {
 	left: 50%;
 	top: 47%;
 	transform: translate(-50%, -50%);
+	position: relative;
+
+	&::after {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 120px; // Increased height for more coverage
+		background: linear-gradient(
+			to bottom,
+			rgba(255, 255, 255, 0) 0%,
+			rgba(255, 255, 255, 0.6) 40%,
+			rgba(255, 255, 255, 1) 100%
+		);
+		pointer-events: none;
+		z-index: 2;
+	}
 }
 
 canvas {
