--- a/src/Features/NavBar/Components/Three/canvas.scss
+++ b/src/Features/NavBar/Components/Three/canvas.scss
@@ -13,13 +13,24 @@
 	transform: translate(-50%, -50%);
 	position: relative;
 
+	background-color: white;
+	background-image: linear-gradient(rgba(0, 0, 255, 0.05) 1px, transparent 1px),
+		linear-gradient(90deg, rgba(0, 0, 255, 0.05) 1px, transparent 1px),
+		linear-gradient(rgba(0, 0, 255, 0.02) 0.5px, transparent 0.5px),
+		linear-gradient(90deg, rgba(0, 0, 255, 0.02) 0.5px, transparent 0.5px);
+	background-size:
+		12px 12px,
+		12px 12px,
+		2px 2px,
+		2px 2px;
+
 	&::after {
 		content: "";
 		position: absolute;
 		bottom: 0;
 		left: 0;
 		width: 100%;
-		height: 120px; // Increased height for more coverage
+		height: 120px;
 		background: linear-gradient(
 			to bottom,
 			rgba(255, 255, 255, 0) 0%,
@@ -32,7 +43,7 @@
 }
 
 canvas {
-	background-color: white;
+	background-color: transparent !important; // Changed from white to transparent
 	width: 100% !important;
 	height: 100% !important;
 }
