--- a/src/Views/Auth/Login/Login.module.scss
+++ b/src/Views/Auth/Login/Login.module.scss
@@ -22,7 +22,7 @@
 		&-background {
 			width: auto;
 			height: 100%;
-			background: url("src/assets/Auth/Background.png") no-repeat right bottom;
+			background: url("@assets/Auth/Background.png") no-repeat right bottom;
 			background-position: 30%;
 			transform: rotate(90deg);
 			transform-origin: center center;
