feat: added some responsive design to PlanWidget

--- a/src/Features/PlanWidget/Components/Tabs/Tabs.module.scss
+++ b/src/Features/PlanWidget/Components/Tabs/Tabs.module.scss
@@ -17,6 +17,7 @@
 	&:first-child {
 		.Tabs-tab {
 			border-top-left-radius: 8px;
+			padding-left: 20px;
 		}
 		.Tabs-slope-container {
 			display: none;
@@ -65,6 +66,9 @@
 }
 
 .Tabs-tab {
+	display: flex;
+	align-items: center;
+
 	padding: 6px 50px 3px 20px;
 	font-size: 16px;
 	font-weight: 500;
@@ -74,6 +78,16 @@
 	overflow: hidden;
 	background: rgba(245, 247, 252, 1);
 	transition: all 0.2s ease;
+
+	@include media_1536 {
+		padding: 6px 35px 3px 0px;
+		font-size: 14px;
+	}
+
+	@include media_1248 {
+		line-height: 14px;
+		text-align: center;
+	}
 }
 
 .Tabs-slope-container {
