--- a/src/Features/PlanWidget/Components/PlanRow/PlanRow.module.scss
+++ b/src/Features/PlanWidget/Components/PlanRow/PlanRow.module.scss
@@ -109,6 +109,10 @@
 	flex-direction: row;
 	align-items: center;
 	gap: 8px;
+
+	@include media_1248 {
+		flex-direction: column;
+	}
 }
 
 .PlanRow-why {
@@ -125,6 +129,28 @@
 
 	p {
 		margin: 0;
+	}
+}
+
+.PlanRow-chevron-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	rotate: (-90deg);
+	background: rgba(59, 141, 245, 0.12);
+	border-radius: 100%;
+	padding: 8px;
+	transition: all 0.2s ease;
+
+	&:hover {
+		transform: scale(1.05);
+		background: rgba(13, 65, 133, 0.12);
+	}
+
+	svg {
+		width: 16px;
+		height: 16px;
+		stroke: rgba(0, 41, 173, 1);
 	}
 }
 
