--- a/src/Features/ConcernsWidget/Components/ConcernsCard/ConcernsCard.module.scss
+++ b/src/Features/ConcernsWidget/Components/ConcernsCard/ConcernsCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../App/Styles/_mixins.scss";
+@use "../../../../App/Styles/_mixins" as *;
 
 .ConcernsCard-card {
 	display: flex;
