--- a/src/Features/NavBar/Components/Three/canvas.scss
+++ b/src/Features/NavBar/Components/Three/canvas.scss
@@ -12,17 +12,10 @@
 	top: 47%;
 	transform: translate(-50%, -50%);
 	position: relative;
-
-	background-color: white;
-	background-image: linear-gradient(rgba(0, 0, 255, 0.05) 1px, transparent 1px),
-		linear-gradient(90deg, rgba(0, 0, 255, 0.05) 1px, transparent 1px),
-		linear-gradient(rgba(0, 0, 255, 0.02) 0.5px, transparent 0.5px),
-		linear-gradient(90deg, rgba(0, 0, 255, 0.02) 0.5px, transparent 0.5px);
-	background-size:
-		12px 12px,
-		12px 12px,
-		2px 2px,
-		2px 2px;
+	background: url("/assets/images/canvas-bg.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 
 	&::after {
 		content: "";
@@ -41,9 +34,8 @@
 		z-index: 2;
 	}
 }
-
 canvas {
-	background-color: transparent !important; // Changed from white to transparent
+	background-color: transparent !important;
 	width: 100% !important;
 	height: 100% !important;
 }
