--- a/src/Features/Structural/NavBar/Components/Navigation/Navigation.module.scss
+++ b/src/Features/Structural/NavBar/Components/Navigation/Navigation.module.scss
@@ -29,7 +29,7 @@
 		align-items: center;
 		height: auto;
 		gap: 8px;
-		background: none;
+		background: #e7e9ec66;
 		border-radius: 99px;
 		color: #0b101a;
 		text-align: center;
