--- a/src/Features/DigitalTwin/Components/Three/canvas.scss
+++ b/src/Features/DigitalTwin/Components/Three/canvas.scss
@@ -2,38 +2,46 @@
 	position: relative;
 	width: 100%;
 	height: 100vh;
+	display: flex;
+	justify-content: flex-start;
+	background-size: contain;
+	background-blend-mode: overlay;
 }
 
 .canvas-wrapper {
 	position: absolute;
-	width: 38vw;
+	width: 100%;
 	height: 80vh;
 	left: 50%;
-	top: 47%;
+	top: 40%;
 	transform: translate(-50%, -50%);
 	position: relative;
-	background: url("/assets/images/canvas-bg.jpg");
-	background-size: cover;
+	background: url("/public/assets/images/canvas-bg.jpg");
+	background-color: #ffffff;
+	background-size: contain;
+	background-blend-mode: luminosity;
 	background-position: center;
 	background-repeat: no-repeat;
-
-	&::after {
-		content: "";
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		height: 120px;
-		background: linear-gradient(
-			to bottom,
-			rgba(255, 255, 255, 0) 0%,
-			rgba(255, 255, 255, 0.6) 40%,
-			rgba(255, 255, 255, 1) 100%
-		);
-		pointer-events: none;
-		z-index: 2;
-	}
 }
+.canvas-wrapper::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: radial-gradient(
+		ellipse at center,
+		rgba(0, 0, 0, 0) 50%,
+
+		rgba(255, 255, 255, 1) 69%,
+		rgba(255, 255, 255, 1) 100%
+	);
+	pointer-events: none; /* Ensures the vignette does not interfere with interactions */
+	z-index: 1; /* Ensures the vignette is above the container content */
+	transform: scale(1, 1);
+}
+
 canvas {
 	background-color: transparent !important;
 	width: 100% !important;
