--- a/src/Features/DigitalTwin/Components/Three/canvas.scss
+++ b/src/Features/DigitalTwin/Components/Three/canvas.scss
@@ -16,7 +16,7 @@
 	top: 40%;
 	transform: translate(-50%, -50%);
 	position: relative;
-	background: url("/public/assets/images/canvas-bg.jpg");
+	background: url("@assets/DigitalTwin/images/canvas-bg.jpg");
 	background-color: #ffffff;
 	background-size: contain;
 	background-blend-mode: luminosity;
