feat: update the config control and put that into upload component

--- a/src/Features/Onboarding/Upload/Components/ConfigControl/ConfigControl.module.scss
+++ b/src/Features/Onboarding/Upload/Components/ConfigControl/ConfigControl.module.scss
@@ -1,12 +1,14 @@
 .config-control-bar {
-	width: 95%;
 	position: fixed;
+	width: 100%;
 	background-color: rgba(255, 255, 255, 0.15);
-	height: 50px;
-	border-radius: 40px;
-	bottom: 30px;
+	border-radius: 99px;
+	bottom: 0px;
+	left: 0px;
 	display: flex;
-	padding: var(--space-8-px-05-rem, 8px) var(--space-10-px-0625-rem, 10px);
+	padding: 8px 10px;
+	margin: 0px;
+	box-sizing: border-box;
 	justify-content: space-between;
 	align-items: center;
 
@@ -16,28 +18,47 @@
 		gap: 4px;
 	}
 
-	&-skip {
-		padding: var(---Buttons-and-Inputs-lg-py, 12px)
-			var(---Buttons-and-Inputs-lg-px, 16px);
-		gap: var(---Buttons-and-Inputs-gap, 8px);
-		border-radius: var(
-			---Buttons-and-Inputs-button-border-radius-primary,
-			999px
-		);
-		background: var(--Background, #fcfdfd);
-	}
-
 	&-submit {
 		border-radius: var(
 			---Buttons-and-Inputs-button-border-radius-primary,
 			999px
 		);
-		opacity: 0.4;
-		background: #13285f;
+		background: #1f1f1f;
 		color: white;
 
 		&:hover {
 			border-color: white;
 		}
 	}
+}
+
+.config-control-items {
+	display: flex;
+	padding: 2px;
+	justify-content: center;
+	align-items: flex-start;
+	border-radius: var(--font-size-3xl, 24px);
+	background: rgba(255, 255, 255, 0.22);
+}
+
+.config-control-item {
+	padding: 4px 8px;
+	border-radius: 99px;
+
+	background: none;
+
+	color: var(--Neutral-text, #0b101a);
+	text-align: center;
+	font-family: var(--font-family-body, Inter);
+	font-size: var(--font-size-lg, 14px);
+	font-style: normal;
+	font-weight: var(--font-weight-medium-500, 500);
+	line-height: var(--font-line-hight-lg, 20px);
+}
+
+.selected-config-control-item {
+	background: var(--Background, #fcfdfd) !important;
+	box-shadow:
+		0px 2px 2px 0px rgba(20, 28, 44, 0.04),
+		0px 2px 4px 1px rgba(20, 28, 44, 0.04);
 }
