feat: add upload process screen

--- a/src/App/Layouts/ConfigLayout.module.scss
+++ b/src/App/Layouts/ConfigLayout.module.scss
@@ -10,7 +10,7 @@
 			rgba(255, 255, 255, 1) 51.45%,
 			rgba(128, 151, 205, 0.6) 92.89%
 		),
-		url("src/assets/General/UploadBackground.png");
+		url("@assets/General/UploadBackground.png");
 
 	background-repeat: no-repeat;
 	background-position: center center;
