--- a/src/Features/Dashboard/SystemDetailWidget/SystemDetailWidget.module.scss
+++ b/src/Features/Dashboard/SystemDetailWidget/SystemDetailWidget.module.scss
@@ -1,9 +1,58 @@
 @use "@/App/Styles/_mixins" as mixins;
 
 .SystemDetailWidget-container {
-	display: flex;
+	display: none;
 	flex-direction: column;
 	gap: 8px;
+	overflow: hidden;
+
+	margin-top: 0;
+	animation: expand 1.2s ease-in;
+}
+
+.SystemDetailWidget-container-collapse {
+	overflow: hidden;
+	animation: collapse 0.8s ease;
+	max-height: 0;
+	margin-top: 0;
+}
+
+.SystemDetailWidget-container-expand {
+	display: flex;
+}
+
+@keyframes expand {
+	0% {
+		opacity: 0;
+		max-height: 0;
+		margin-top: -16px;
+	}
+	50% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+		max-height: 400px;
+		margin-top: 0px;
+	}
+}
+
+@keyframes collapse {
+	0% {
+		display: flex;
+		opacity: 1;
+		max-height: 400px;
+		margin-top: 0px;
+	}
+	// 99.9% {
+	// 	display: flex;
+	// }
+	100% {
+		opacity: 0;
+		max-height: 0;
+		display: none;
+		margin-top: -16px;
+	}
 }
 
 .SystemDetailWidget-head {
