--- a/src/Views/Dashboard/Dashboard.module.scss
+++ b/src/Views/Dashboard/Dashboard.module.scss
@@ -3,8 +3,7 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	height: 100vh;
-	width: 100vw;
-	overflow: hidden;
+	width: 100%;
 }
 
 .Dashboard-dt-container {
