--- a/src/Features/DigitalTwin/Components/Three/Scene/canvas.scss
+++ b/src/Features/DigitalTwin/Components/Three/Scene/canvas.scss
@@ -30,13 +30,19 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: radial-gradient(
-		ellipse at center,
-		rgba(0, 0, 0, 0) 50%,
 
-		rgba(255, 255, 255, 1) 69%,
-		rgba(255, 255, 255, 1) 100%
-	);
+	background: 
+    linear-gradient(to bottom, rgb(255, 255, 255), transparent 5%),
+    linear-gradient(to top, rgb(255, 255, 255), transparent 10%),
+    linear-gradient(to left, rgb(255, 255, 255), transparent 10%),
+    linear-gradient(to right, rgb(255, 255, 255), transparent 10%);
+	// background: radial-gradient(
+	// 	ellipse at center,
+	// 	rgba(0, 0, 0, 0) 65%,
+	
+	// 	rgba(255, 255, 255, 1) 70%,
+	// 	rgba(255, 255, 255, 1) 100%
+	// );
 	pointer-events: none; /* Ensures the vignette does not interfere with interactions */
 	z-index: 1; /* Ensures the vignette is above the container content */
 	transform: scale(1, 1);
