--- a/src/Features/Dashboard/ConcernsWidget/ConcernsWidget.module.scss
+++ b/src/Features/Dashboard/ConcernsWidget/ConcernsWidget.module.scss
@@ -211,3 +211,18 @@
 		max-height: 0;
 	}
 }
+
+.ConcernWidget-symptoms {
+	overflow: hidden;
+	transition: all 1s ease;
+
+	&-visible {
+		max-height: 400px;
+	}
+
+	&-hidden {
+		visibility: hidden;
+		max-height: 0;
+		transition: all 0.3s ease;
+	}
+}
