--- a/src/App/Layouts/ConfigLayout.module.scss
+++ b/src/App/Layouts/ConfigLayout.module.scss
@@ -4,27 +4,16 @@
 	width: 100vw;
 	height: 100vh;
 	align-items: center;
-
-	background-image: linear-gradient(
-			170deg,
-			rgba(255, 255, 255, 1) 51.45%,
-			rgba(128, 151, 205, 0.6) 92.89%
-		),
-		url("@assets/General/UploadBackground.png");
-
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	background-blend-mode: plus-darker, normal, multiply, normal;
 }
 
 .logo-wrapper {
 	display: flex;
-	padding: var(--layout-card-l-storytelling-margin-right-left, 32px);
-	flex-direction: column;
+	padding: var(--layout-page-margins-top_bottom, 20px);
+	justify-content: space-between;
 	align-items: flex-start;
-	gap: 8px;
+	flex-shrink: 0;
 	align-self: stretch;
+	border-bottom: 1px solid var(--Border-weak, #f0f1f0);
 
 	svg {
 		width: 150px;
