--- a/src/Features/Onboarding/Upload/Components/UploadFile/UploadFile.module.scss
+++ b/src/Features/Onboarding/Upload/Components/UploadFile/UploadFile.module.scss
@@ -1,6 +1,6 @@
 .upload-file-container {
 	display: flex;
-	height: 30px;
+	flex-direction: column;
 	padding: 8px;
 	align-items: center;
 	gap: 8px;
@@ -8,18 +8,54 @@
 	border-radius: 6px;
 	border: 1px solid var(--p-color-border, rgba(223, 225, 228, 1));
 	background: var(--neutral-background-background-base, #fff);
-	justify-content: space-between;
+	margin-bottom: 4px;
 
-	.file {
-		overflow: hidden;
-		color: var(--p-color-text, rgba(33, 38, 46, 1));
-		text-overflow: ellipsis;
-		white-space: nowrap;
+	.info {
+		display: flex;
+		align-items: center;
+		gap: 8px;
+		align-self: stretch;
+		justify-content: space-between;
+		width: 100%;
 
-		font-family: var(--Font-family-body, Inter);
-		font-size: var(--Font-size-S, 14px);
-		font-style: normal;
-		font-weight: 400;
-		line-height: var(--Font-line-height-M, 20px);
+		.file {
+			display: flex;
+			gap: 8px;
+			align-items: center;
+			justify-content: center;
+			overflow: hidden;
+			color: var(--p-color-text, rgba(33, 38, 46, 1));
+			text-overflow: ellipsis;
+			white-space: nowrap;
+
+			font-family: var(--Font-family-body, Inter);
+			font-size: var(--Font-size-S, 14px);
+			font-style: normal;
+			font-weight: 400;
+			line-height: var(--Font-line-height-M, 20px);
+
+			.done {
+				display: flex;
+				padding: var(--space-2-px-0125-rem, 2px) var(--space-8-px-05-rem, 8px);
+				align-items: center;
+				gap: 8px;
+				border-radius: var(--Font-size-L, 18px);
+				background: var(--Background---medium, #e4ebf9);
+			}
+		}
+	}
+
+	.progress-bar-container {
+		width: 100%;
+		height: 4px;
+		border-radius: 2px;
+		background: #f0f0f0;
+
+		.progress-bar {
+			height: 100%;
+			border-radius: 2px;
+			background: var(--p-color-primary, rgba(0, 82, 204, 1));
+			transition: width 0.2s ease;
+		}
 	}
 }
