--- a/src/Features/Onboarding/Upload/Components/UploadFiles/UploadFiles.module.scss
+++ b/src/Features/Onboarding/Upload/Components/UploadFiles/UploadFiles.module.scss
@@ -1,115 +1,192 @@
 .upload-body {
 	display: flex;
-	max-width: 862px;
+	width: 834px;
 	padding: var(--rithm-XL, 40px);
 	align-items: flex-start;
 	gap: 24px;
-	border-radius: 20px;
+	border-radius: var(--Font-size-M, 16px);
 	border: 1px solid #e7ecf2;
 	background: #fff;
+	flex-direction: column;
+
+	/* Elevation/sm */
 	box-shadow:
-		0px 33px 47px 0px rgba(0, 72, 115, 0.07),
-		0px 7.371px 10.498px 0px rgba(0, 72, 115, 0.04),
-		0px 2.195px 3.126px 0px rgba(0, 72, 115, 0.03);
+		var(--Elevations-sm-1-X, 0px) var(--Elevations-sm-1-Y, 2px)
+			var(--Elevations-sm-1-Blur, 2px) var(--Elevations-sm-1-Spread, 0px)
+			rgba(19, 22, 29, 0.06),
+		var(--Elevations-sm-2-X, 0px) var(--Elevations-sm-2-Y, 2px)
+			var(--Elevations-sm-2-Blur, 4px) var(--Elevations-sm-2-Spread, 1px)
+			rgba(19, 22, 29, 0.04);
+	transition:
+		box-shadow 0.3s ease,
+		transform 0.3s ease,
+		background 0.3s ease;
+
+	animation: fadeInUp 0.8s ease-out;
 }
 
-.left-side {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	flex: 1 0 0;
-
-	.upload-info {
-		display: flex;
-		padding-bottom: var(--space-20-px-125-rem, 20px);
-		flex-direction: column;
-		align-items: flex-start;
-		gap: 8px;
-		align-self: stretch;
-		.title {
-			color: var(--Neutral-text, #0b101a);
-
-			/* actions/title/H2 SB */
-			font-family: var(--font-family-title, Inter);
-			font-size: var(--font-size-3xl, 24px);
-			font-style: normal;
-			font-weight: var(--font-weight-semibold-600, 600);
-			line-height: var(--font-line-hight-2xl, 32px); /* 133.333% */
-			letter-spacing: -0.48px;
-		}
-
-		.description {
-			color: var(--p-color-text, rgba(81, 89, 103, 1));
-
-			/* body/md/regular */
-			font-family: var(--Font-family-body, Inter);
-			font-size: var(--Font-size-S, 14px);
-			font-style: normal;
-			font-weight: 400;
-			line-height: var(--Font-line-height-M, 20px); /* 142.857% */
-		}
+@keyframes fadeInUp {
+	0% {
+		opacity: 0;
+		transform: translateY(30px);
 	}
-
-	.upload-items {
-		width: 100%;
+	60% {
+		opacity: 1;
+		transform: translateY(-10px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
 	}
 }
 
-.right-side {
+.upload-body:hover {
+	transform: scale(1.05);
+	box-shadow:
+		var(--Elevations-sm-1-X, 0px) var(--Elevations-sm-1-Y, 8px)
+			var(--Elevations-sm-1-Blur, 16px) var(--Elevations-sm-1-Spread, 1px)
+			rgba(19, 22, 29, 0.15),
+		var(--Elevations-sm-2-X, 0px) var(--Elevations-sm-2-Y, 10px)
+			var(--Elevations-sm-2-Blur, 24px) var(--Elevations-sm-2-Spread, 2px)
+			rgba(19, 22, 29, 0.1);
+}
+
+.upload-info {
 	display: flex;
-	width: 294px;
-	padding: 24px;
+	padding-bottom: var(--space-12-px-075-rem, 12px);
 	flex-direction: column;
 	align-items: flex-start;
-	gap: 16px;
-	flex-shrink: 0;
+	gap: 8px;
+	align-self: stretch;
+	width: 100%;
+
+	.title {
+		color: var(--Neutral-text, #0b101a);
+
+		/* actions/title/H2 SB */
+		font-family: var(--font-family-title, Inter);
+		font-size: var(--font-size-3xl, 24px);
+		font-style: normal;
+		font-weight: var(--font-weight-semibold-600, 600);
+		line-height: var(--font-line-hight-2xl, 32px); /* 133.333% */
+		letter-spacing: -0.48px;
+	}
+
+	.description {
+		color: var(--p-color-text, rgba(81, 89, 103, 1));
+
+		/* body/md/regular */
+		font-family: var(--Font-family-body, Inter);
+		font-size: var(--Font-size-S, 14px);
+		font-style: normal;
+		font-weight: 400;
+		line-height: var(--Font-line-height-M, 20px); /* 142.857% */
+	}
+}
+
+.upload-items {
+	width: 100%;
+}
+
+.bottom-side {
+	display: flex;
+	padding: var(--space-16-px-1-rem, 16px);
+	align-items: flex-start;
+	gap: 24px;
 	align-self: stretch;
 	border-radius: 8px;
 	border: 1px solid var(--Background---medium, #e4ebf9);
-	background:
-		linear-gradient(90deg, #21262e 0%, #363c47 100%),
-		no-repeat,
-		url("@assets/General/UploadBackground.png") right bottom;
-	background-blend-mode: multiply, normal;
-	background-size: cover;
-
-	/* Scrim blur */
+	background: linear-gradient(90deg, #21262e 0%, #363c47 100%);
 	backdrop-filter: blur(1.5px);
-
 	justify-content: space-between;
+	transition: background 0.3s ease;
+
+	.icon-wrapper {
+		display: flex;
+		align-items: flex-start;
+		gap: 8px;
+		flex: 1 0 0;
+		padding: 12px;
+	}
 
 	.content {
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
+		justify-content: center;
 		align-items: flex-start;
-		gap: 16px;
+		gap: var(--space-12-px-075-rem, 8px);
+
 		.info {
 			display: flex;
 			flex-direction: column;
 			align-items: flex-start;
-			gap: 8px;
-			flex: 1 0 0;
 			align-self: stretch;
+			gap: 12px;
 
 			.title {
-				color: var(--p-color-text, white);
+				color: var(--p-color-text, rgba(239, 240, 241, 1));
 
-				/* heading/md/semibold */
 				font-family: var(--Font-family-heading, Inter);
 				font-size: var(--Font-size-L, 18px);
 				font-style: normal;
 				font-weight: 600;
-				line-height: var(--Font-line-height-XL, 28px); /* 155.556% */
+				line-height: var(--Font-line-height-XL, 28px);
 			}
+
 			.description {
 				color: var(--p-color-text, rgba(164, 169, 177, 1));
 
-				/* body/md/regular */
 				font-family: var(--Font-family-body, Inter);
 				font-size: var(--Font-size-S, 14px);
 				font-style: normal;
 				font-weight: 400;
-				line-height: var(--Font-line-height-M, 20px); /* 142.857% */
+				line-height: var(--Font-line-height-M, 20px);
+			}
+		}
+	}
+
+	.img-wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-end;
+		gap: 8px;
+
+		.wrapper {
+			display: flex;
+			padding-top: 4px;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			gap: 7px;
+			border-radius: 8px;
+			border: 1px solid var(--neutral-border-border-weak, #444b57);
+
+			.img {
+				display: flex;
+				width: 99px;
+				padding-top: 4.378px;
+				justify-content: center;
+				align-items: center;
+				opacity: 0.5;
+			}
+
+			.title {
+				display: flex;
+				padding: 4px 7px;
+				justify-content: center;
+				align-items: center;
+				gap: 8px;
+				background: var(
+					--p-color-bg-fill-transparent-hover,
+					rgba(241, 241, 242, 0.12)
+				);
+				color: var(--p-color-text, rgba(164, 169, 177, 1));
+				font-family: var(--Font-family-body, Inter);
+				font-size: 12px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 16px; /* 133.333% */
 			}
 		}
 	}
@@ -122,7 +199,12 @@
 	justify-content: center;
 	align-items: center;
 	gap: var(---Buttons-and-Inputs-sm-gap, 8px);
+	background: #21262e;
 	border-radius: var(---Buttons-and-Inputs-button-border-radius-primary, 999px);
-	background: var(--p-color-bg-fill-magic, rgba(59, 141, 245, 0.16));
+	border: var(--Border-Width-thick, 1px) solid
+		var(--p-color-icon-emphasis-hover, rgba(108, 170, 247, 1));
 	color: rgba(132, 184, 249, 1);
+	transition:
+		background 0.3s ease,
+		transform 0.3s ease;
 }
