--- a/src/Features/Dashboard/ConcernsWidget/Components/SymptomsList/SymptomsList.module.scss
+++ b/src/Features/Dashboard/ConcernsWidget/Components/SymptomsList/SymptomsList.module.scss
@@ -43,4 +43,24 @@
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 16px;
+
+	&-hidden {
+		position: absolute;
+		visibility: hidden;
+	}
+}
+
+.SymptomsList-symptom-overflow {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 8px;
+	padding: 4px 8px;
+	border-radius: 100px;
+	background: linear-gradient(293deg, rgba(255, 255, 255, 0.7) 0.1%, #fff 100%);
+
+	color: rgba(33, 38, 46, 1);
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 16px;
 }
