--- a/src/Features/Onboarding/Upload/Components/UploadFiles/UploadFiles.module.scss
+++ b/src/Features/Onboarding/Upload/Components/UploadFiles/UploadFiles.module.scss
@@ -17,31 +17,20 @@
 		var(--Elevations-sm-2-X, 0px) var(--Elevations-sm-2-Y, 2px)
 			var(--Elevations-sm-2-Blur, 4px) var(--Elevations-sm-2-Spread, 1px)
 			rgba(19, 22, 29, 0.04);
-	transition:
-		box-shadow 0.3s ease,
-		transform 0.3s ease,
-		background 0.3s ease;
 
-	animation: fadeInUp 0.8s ease-out;
+	animation: fadeIn 1s ease forwards;
 }
 
-@keyframes fadeInUp {
+@keyframes fadeIn {
 	0% {
 		opacity: 0;
-		transform: translateY(30px);
-	}
-	60% {
-		opacity: 1;
-		transform: translateY(-10px);
 	}
 	100% {
 		opacity: 1;
-		transform: translateY(0);
 	}
 }
 
 .upload-body:hover {
-	transform: scale(1.05);
 	box-shadow:
 		var(--Elevations-sm-1-X, 0px) var(--Elevations-sm-1-Y, 8px)
 			var(--Elevations-sm-1-Blur, 16px) var(--Elevations-sm-1-Spread, 1px)
