enhancement: changed animation on dashboard widgets

--- a/src/App/Styles/Global.scss
+++ b/src/App/Styles/Global.scss
@@ -32,6 +32,11 @@ body {
 	min-height: 100vh;
 }
 
+#root {
+	width: 100%;
+	box-sizing: border-box;
+}
+
 h1 {
 	font-size: 3.2em;
 	line-height: 1.1;
