--- a/src/Features/Dashboard/AgeWidget/AgeWidget.module.scss
+++ b/src/Features/Dashboard/AgeWidget/AgeWidget.module.scss
@@ -7,11 +7,12 @@
 	gap: 32px;
 
 	padding: 20px;
-	// background: linear-gradient(
-	// 	131.7deg,
-	// 	rgba(151, 176, 232, 0.5) 38.15%,
-	// 	rgba(255, 255, 255, 0) 82.07%
-	// );
+	background: linear-gradient(
+		132deg,
+		rgba(151, 176, 232, 0.5) 38.15%,
+		rgba(255, 255, 255, 0) 82.07%
+	);
+
 	border-radius: 16px;
 	margin-top: -2px;
 	border: 1px solid #94b2ec;
