--- a/src/Features/Dashboard/ConcernsWidget/ConcernsWidget.module.scss
+++ b/src/Features/Dashboard/ConcernsWidget/ConcernsWidget.module.scss
@@ -107,16 +107,13 @@
 .ConcernWidget-concern-cards {
 	gap: 12px;
 	grid-template-columns: repeat(3, 1fr);
-	// max-height: 0;
 
 	&-hidden {
-		animation: slideOut 2s ease;
 		transform: translateX(-100%);
 		display: none;
 	}
 
 	&-visible {
-		animation: slideIn 2s ease;
 		transform: translateX(0%);
 		display: grid;
 	}
@@ -127,70 +124,60 @@
 	grid-template-columns: repeat(3, 1fr);
 
 	&-visible {
-		animation: slideIn 2s ease;
 		transform: translateX(0%);
 		display: grid;
 	}
 
 	&-hidden {
-		animation: slideOut2 2s ease;
 		transform: translateX(-102%);
-		display: grid;
-		max-height: 0;
-		// max-height: calc(fit-content + 10px);
+		display: none;
 	}
 }
 
-// @keyframes slideOut {
-// 	0% {
-// 		max-height: 0;
-// 		display: grid;
-// 		transform: translateX(0%);
-// 	}
-// 	100% {
-// 		max-height: 0;
-// 		transform: translateX(-102%);
-// 	}
-// }
+@keyframes slideOut {
+	0% {
+		max-height: 0;
+		display: grid;
+		transform: translateX(0%);
+	}
+	100% {
+		max-height: 0;
+		transform: translateX(-102%);
+	}
+}
 
-// @keyframes slideOut2 {
-// 	0% {
-// 		max-height: calc(fit-content + 10px);
-// 		transform: translateX(0%);
-// 	}
-// 	100% {
-// 		max-height: calc(fit-content + 10px);
-// 		display: grid;
-// 		transform: translateX(-102%);
-// 	}
-// }
+@keyframes slideOut2 {
+	0% {
+		max-height: calc(fit-content + 10px);
+		transform: translateX(0%);
+	}
+	100% {
+		max-height: calc(fit-content + 10px);
+		display: grid;
+		transform: translateX(-102%);
+	}
+}
 
-// @keyframes slideIn {
-// 	0% {
-// 		// max-height: calc(fit-content);
-// 		display: grid;
-// 		transform: translateX(100%);
-// 	}
-// 	100% {
-// 		// max-height: calc(fit-content);
-// 		transform: translateX(0%);
-// 	}
-// }
+@keyframes slideIn {
+	0% {
+		max-height: calc(fit-content);
+		display: grid;
+		transform: translateX(100%);
+	}
+	100% {
+		max-height: calc(fit-content);
+		transform: translateX(0%);
+	}
+}
 
 .ConcernWidget-reasons {
-	// width: 100%;
 	overflow: hidden;
-	max-height: 0;
-	// display: none;
 
 	&-visible {
-		// display: block;
-		max-height: fit-content;
-		animation: expand 2s ease;
 	}
 
 	&-hidden {
-		// animation: collapse 1s ease;
+		display: none;
 	}
 }
 
