--- a/src/Views/Dashboard/Dashboard.module.scss
+++ b/src/Views/Dashboard/Dashboard.module.scss
@@ -9,8 +9,8 @@
 .Dashboard-dt-container {
 	display: flex;
 	flex-direction: column;
-	flex: 1;
 	position: relative;
+	width: 100%;
 }
 
 .Dashboard-content {
@@ -36,17 +36,25 @@
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
-	width: 51%;
+	width: 100%;
 	height: fit-content;
 	padding-bottom: 24px;
+	overflow-x: hidden;
 
-	&.animate > * {
+	> * {
+		transform: translateX(100%);
+		animation: slideIn 0.7s ease-out forwards;
+		animation-delay: calc((var(--child-index, 1) - 1) * 0.2s);
+	}
+
+	&.loopAnimation > * {
 		animation: slideOutAndIn 1.5s ease-out forwards;
+		transform: translateX(0%);
 	}
 
 	@media (max-width: 920px) {
 		width: 100%;
-		&.animate > * {
+		&.loopAnimation > * {
 			animation: slideOutAndInMobile 1.5s ease-out forwards;
 		}
 	}
@@ -74,9 +82,11 @@
 		transform: translateX(0);
 		opacity: 1;
 	}
+	30% {
+		opacity: 0;
+	}
 	50% {
 		transform: translateX(100%);
-		opacity: 0;
 	}
 	100% {
 		transform: translateX(0);
