--- a/src/Features/Dashboard/ConcernsWidget/Components/ReasonRow/ReasonRow.module.scss
+++ b/src/Features/Dashboard/ConcernsWidget/Components/ReasonRow/ReasonRow.module.scss
@@ -1,21 +1,18 @@
 @use "@/App/Styles/_mixins" as mixins;
 
-.ReasonRow-row {
+.ReasonRow-container {
 	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
+	flex-direction: column;
+	gap: 0px;
 	width: 100%;
-	gap: 8px;
 	padding: 6px 12px;
 	border-radius: 2px;
-	background: linear-gradient(293deg, rgba(255, 255, 255, 0.7) 0.1%, #fff 100%),
-		linear-gradient(
-			180deg,
-			rgba(255, 255, 255, 0) 0%,
-			rgba(255, 255, 255, 0.3) 100%
-		);
 	box-sizing: border-box;
+	transition: all 0.2s ease;
+	background: #ffffff;
+	position: relative;
+	border: 1px solid #e4ebf9;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
 	&::after {
 		content: "";
@@ -27,6 +24,52 @@
 		border-left: 1px solid rgba(140, 147, 143, 1);
 		border-bottom: 1px solid rgba(140, 147, 143, 1);
 	}
+
+	&:hover {
+		cursor: pointer;
+		transition: all 0.2s ease;
+		background: #faf8f8;
+		border: 1px solid rgba(59, 141, 245, 0.4);
+		box-sizing: border-box;
+		box-shadow:
+			10 10px 20px rgba(0, 0, 0, 0.1),
+			0 4px 6px rgba(0, 0, 0, 0.1);
+	}
+
+	&-open {
+		gap: 12px;
+
+		&::after {
+			border-left: 1px solid rgba(59, 141, 245, 1);
+			border-bottom: 1px solid rgba(59, 141, 245, 1);
+		}
+	}
+}
+
+.ReasonRow-row {
+	flex: 1 0 0;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+
+	width: 100%;
+	gap: 8px;
+	box-sizing: border-box;
+}
+
+.ReasonRow-chevron-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.ReasonRow-chevron {
+	transition: transform 0.3s ease;
+}
+
+.rotate-chevron {
+	transform: rotate(180deg);
 }
 
 .ReasonRow-title {
@@ -67,13 +110,14 @@
 	border-radius: 4px;
 	background: linear-gradient(
 		90deg,
-		#68b142 0%,
-		#b0d69c 34.86%,
-		#ffd24b 68.26%,
-		#b94153 100%
+		rgba(231, 72, 80, 0.5) 0%,
+		rgba(255, 135, 24, 0.5) 25%,
+		rgba(159, 254, 114, 0.5) 50%,
+		rgba(255, 135, 24, 0.5) 75%,
+		rgba(231, 72, 80, 0.5) 100%
 	);
 
-	&-hidden {
+	Selection colors RGB &-hidden {
 		visibility: hidden;
 	}
 }
@@ -124,12 +168,11 @@
 .ReasonRow-status-wrapper {
 	flex: 1 0 0;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: flex-start;
 }
 
 .ReasonRow-status {
 	display: flex;
-	align-items: flex-end;
 	gap: 4px;
 	width: fit-content;
 	max-height: 20px;
@@ -149,4 +192,29 @@
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 14px;
+}
+
+.ReasonRow-date {
+	flex: 1 0 0;
+	color: rgba(81, 89, 103, 1);
+	text-align: right;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 16px;
+}
+
+.ReasonRow-description {
+	max-height: 0;
+	overflow: hidden;
+	transition: all 0.3s ease;
+	color: rgba(81, 89, 103, 1);
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 16px;
+
+	&-open {
+		transition: all 0.3s ease;
+		max-height: 100px;
+		border-radius: 2px;
+	}
 }
